# labbutler

./: .dockerignore  .env.example  .gitignore  Buildspec.md  Buildv1.MD  CLAUDE.md  Dockerfile  Procurement.MD  README.md  TODO.md  conftest.py  docker-compose.yml  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: docs.yml
apps/attachments/: forms.py  models.py  urls.py  views.py
apps/audit/: admin.py  models.py
apps/comments/: forms.py  models.py  urls.py  views.py
apps/imports/: generic.py  labsuit.py  orders.py  orders_service.py  parsers.py  service.py  urls.py  views.py
apps/inventory/: admin.py  forms.py  ghs.py  ghs_lookup.py  ids.py  labels.py  models.py  urls.py  views.py
apps/notifications/: emails.py  tasks.py
apps/procurement/: admin.py  forms.py  models.py  services.py  suggestions.py  urls.py  views.py
apps/tenancy/: admin.py  catalog.py  context_processors.py  forms.py  manage_forms.py  manage_urls.py  manage_views.py  middleware.py  models.py  scoping.py  services.py  urls.py  views.py
docs/: index.md
docs/admin-guide/: configuration.md  index.md  installation.md  maintenance.md
docs/dev-guide/: architecture.md  conventions.md  index.md  setup.md  testing.md
docs/user-guide/: getting-started.md  importing.md  index.md  inventory.md  lab-administration.md  notifications.md  onboarding.md  procurement.md
labbutler/: abstract.py  asgi.py  celery.py  context_processors.py  dashboard.py  middleware.py  settings.py  urls.py  version.py  views.py  wsgi.py
labbutler/tests/: test_dashboard.py  test_privacy.py  test_security.py  test_version.py
scripts/: pg.sh
templates/: _audit_trail.html  base.html  dashboard.html  home.html  lockout.html  privacy.html
templates/attachments/: _list.html
templates/comments/: _thread.html
templates/dashboard/: _action.html
templates/imports/: mapping.html  preview.html  start.html
(+134 files in other folders)
